Fixed button responsivness and navigation bar spacing and started creating search bar.

--- a/css/humane-society.css
+++ b/css/humane-society.css
@@ -4,18 +4,17 @@
     box-sizing: border-box;
 } 
 
-
 body {
     font-family: 'Lato', sans-serif;
 }
 
 .main-wrapper {
-    width: 100%;
+    width: 90%;
     margin: 0 auto;
 }
 
 .header {
-    width: 100%;
+    width: 90%;
     position: absolute;
     z-index: 1000;
 }
@@ -28,13 +27,13 @@ body {
 }
 
 .nav-right {
-    width: 14%;
+    justify-content: flex-end;
 }
 
 .logo-img {
     width: 50px;
 	height: 50px;
-    margin: 15px 15px 15px 15px;
+    margin: 20px 15px 15px 20px;
 }
 
 .header-links {
@@ -44,10 +43,11 @@ body {
 
 .nav-link {
     padding: 20px;
-    color: black;
     text-decoration: none;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
+    color: black;
+    transition: 0.5s ease;
 }
 
 .nav-link:hover {
@@ -55,13 +55,15 @@ body {
 }
 
 .button {
-    width: 100px;
+    min-width: 84px;
     height: 32px;
     margin-right: 12px;
+    border: none;
     font-size: 16px;
     color: white;
     background-color: #71B6C8;
-    border: none;
+    transition: 0.5s ease;
+    cursor: pointer;
 }
 
 .button:hover {
@@ -71,9 +73,13 @@ body {
 
 .search-img {
     width: 22px;
-    margin-right: 15px;
+    margin-right: 20px;
+    cursor: pointer;
 }
 
+form {
+    display: none;
+}
 /* Mobile Menu */
 
 .mobile-menu-container {
@@ -102,6 +108,14 @@ body {
     display: none;
 }
 
+.main-content {
+    transition: all 0.3s ease-out;
+}
+
+.opacity {
+    opacity: .4;
+    transition: all 0.3s ease-in;
+}
 /* Hero Section */
 
 .hero-img {
